infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-grocery
  labels:
    app.kubernetes.io/part-of: smart-grocery
